Rewrite splitpane-blank repro to follow the litecode recipe
The previous version's layout did not reproduce.  The agent on the
affected app pinpointed five things that combine to trigger it; this
commit restructures the demo to exercise the same recipe.

Layout now matches:
  - mainSplit (HORIZONTAL) -> contentSplit (HORIZONTAL) ->
    centerPanel (CardLayout #1) -> repoCard ->
    branchSplit (VERTICAL) -> detailPanel ->
    cardPanel2 (CardLayout #2) -> branchCard ->
    wrapper -> innerTabs (JTabbedPane with 10+ tabs) ->
    WebView tab -> webviewHost -> WebViewComponent
  - East side of contentSplit has a JTabbedPane with a bare
    java.awt.Canvas in one tab, approximating litecode's
    JediTerm heavyweight peer elsewhere in the frame.

Critical timing change: by default the WebView's container chain is
built via SwingUtilities.invokeLater + Timer(500) AFTER
frame.setVisible(true), then attached via two CardLayout.show() calls
(one per nesting level).  The WebView is the LAST tab in innerTabs
and innerTabs starts on Placeholder 0, so the WebView's first paint
waits for a user click on its tab -- "Select WebView tab" in the
toolbar is the programmatic equivalent.

New runtime flags (passed through by the .bat launcher):
  --no-defer       build the WebView chain synchronously inside
                   run() (baseline -- removes the deferred-attach
                   leg of the recipe to see if it still fails)
  --webview-first  put the WebView tab at index 0 and select it
                   (baseline -- removes the deferred-first-paint
                   leg of the recipe)

Toolbar gains a "Select WebView tab" button (programmatic trigger
for the first paint) and "Cycle tabs" now bounces away to
Placeholder 0 and back instead of through the previous tab cycle.
All existing toggles (panel-wrap, mixing cutout, force revalidate)
null-guard on CURRENT_WV[0]/innerTabs/currentWebviewHost since
those are populated by the deferred build.